[package]
name = "csv2sql"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]

csv = "1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]